# qucs

./: .appveyor.yml  .appveyor.yml.old  .cvsignore  .gitignore  .gitmodules  .mailmap  .travis.yml  .travis_check.sh  AUTHORS  CMakeLists.txt  CONTRIBUTE  CONTRIBUTING.md  ChangeLog  MakeList  Makefile.am  Makefile.common  NEWS  NEWS.md  PLATFORMS  QFilterSintez.pro  README  README.md  RELEASE  ROADMAP  STATUS  THANKS  TODO  appveyor.yml  autodsp.sh  autogen.sh  bessel-poles.m  bootstrap  cmakeFaq.md  config.h.cmake  config.h.in  configure.ac  configure.in  depcomp  edit.txt  filter.cpp  (+20 more)
cmake/: CMakeLists.txt  FAQ.txt  README  determineGitCommitHash.cmake  readMakeList.txt
cmake.stale/: CMakeLists.txt  README
cmake.stale/bitmaps/: CMakeLists.txt
cmake.stale/contrib/: CMakeLists.txt
cmake.stale/legacy/: CMakeLists.txt
cmake.stale/legacy_components/: CMakeLists.txt
cmake.stale/main/: CMakeLists.txt  extra.cmake
cmake.stale/man/: CMakeLists.txt
cmake.stale/octave/: CMakeLists.txt
cmake.stale/python/: CMakeLists.txt
cmake.stale/src/: CMakeLists.txt
cmake.stale/translations/: CMakeLists.txt
cmake/main/: CMakeLists.txt  compileAndInstallPlugins.cmake  installQucsApplication.cmake
cmake/src/: CMakeLists.txt
legacy/: CMakeLists.txt  MakeList  Makefile.am  README  compcmd.cpp  component.cpp  componentdialog.cpp  curvediagram.cpp  curvediagram.h  dat.cpp  datfiles.cpp  default_symbol.cpp  edd_symbol.cpp  equation.cpp  factory.h  frame.cpp  gatecomponent.cpp  gui.cc  idcmd.cpp  lang_dat.cpp  lang_dat_hack.cpp  lang_qucsator.cpp  lang_sch.cpp  legacy_painting.h  legacy_task_element.cpp  legacy_task_element.h  libcomp.cpp  libfiles.cpp  marker.h  markerdialog.cpp  modelcmd.cpp  obsolete_paintings.h  obsolete_stuff.h  opt_sim.cpp  optimizedialog.cpp  painting.cpp  paramset.cpp  phasordiagram.cpp  polardiagram.cpp  polardiagram.h  (+23 more)
legacy/action/: MakeList  README  mousecursor.cpp  mousecursor.h  move.cc  paste.cc  select.cc  wire.cc  zoom.cc
man/: CMakeLists.txt  qucs.1  qucs.1.cmake.in
qt3_compat/: Makefile.am  Q3PtrList  Q3ScrollView  q3frame.cpp  q3frame.h  q3gdict.cpp  q3gdict.h  q3glist.cpp  q3glist.h  q3gvector.cpp  q3gvector.h  q3ptrcollection.h  q3ptrdict.h  q3ptrlist.h  q3scrollview.cpp  q3scrollview.h  q3valuelist.h  qt_compat.h
qucs/: .cvsignore  .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTE  COPYING  ChangeLog  Info.plist  MakeList  Makefile.am  NEWS  NEWS.md  PLATFORMS  README  README.translations  RELEASE  ROADMAP  THANKS  TODO  arrow.cpp  arrowdialog.h  attach.cpp  autogen.sh  bin  bootstrap  build-all  c__cmd.cc  changedialog.cpp  changedialog.h  cmdeltdlg.cpp  cmdeltdlg.h  command.cpp  command.h  common.mk  component.cpp  component.h  component_widget.cpp  componentdialog.cpp  componentdialog.h  conductor.cpp  (+232 more)
qucs-activefilter/: CMakeLists.txt  MakeList  Makefile.am  filter.cpp  filter.h  main.cpp  mfbfilter.cpp  mfbfilter.h  qf_poly.cpp  qucsactivefilter.cpp  qucsactivefilter.h  qucsactivefilter.qrc  sallenkey.cpp  sallenkey.h  schcauer.cpp  transferfuncdialog.cpp  transferfuncdialog.h
qucs-attenuator/: CMakeLists.txt  Makefile.am  attenuatorfunc.cpp  attenuatorfunc.h  helpdialog.cpp  helpdialog.h  main.cpp  qucsattenuator.1  qucsattenuator.cpp  qucsattenuator.h
qucs-core/: .cvsignore  .gitignore  AUTHORS  BUGS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.env  Makefile.env.in  NEWS  README  RELEASE  THANKS  TODO  autodsp.sh  autogen.sh  bootstrap  bootstrap.sh  complexcxx.m4  config.h.cmake  configure  configure.ac  get-gtest.sh  libqucs-core.cbp  qucs-core.cbp  qucs_typedefs.h.in  qucscore.ap
qucs-core/adms/: NEWS  (+52 more)
qucs-doc/: .cvsignore  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  NEWS  README  RELEASE  THANKS  TODO  autogen.sh  bootstrap  configure.ac  missing  qucstex.mk
qucs-edit/: CMakeLists.txt  Makefile.am  main.cpp  qucsedit.1  qucsedit.cpp  qucsedit.h
qucs-filter/: CMakeLists.txt  Makefile.am  active_filter.cpp  active_filter.h  bwfilter.cpp  bwfilter.h  ccoupled_shunt_resonators.cpp  cline_filter.cpp  eqn_filter.cpp  eqn_filter.h  filter.cpp  filter.h  helpdialog.cpp  helpdialog.h  lc_filter.cpp  lc_filter.h  line_filter.cpp  main.cpp  material_props.h  qf_cauer.cpp  qf_cauer.h  qf_filter.cpp  qf_filter.h  qf_matrix.h  qf_poly.cpp  qf_poly.h  quarterwave_filter.cpp  qucsfilter.1  qucsfilter.cpp  qucsfilter.h  qw_coupled_ring_filter.cpp  stepz_filter.cpp  tl_filter.cpp
qucs-lib/: CMakeLists.txt  ChangeLog  MakeList  Makefile.am  displaydialog.cpp  displaydialog.h  librarydialog.cpp  librarydialog.h  main.cpp  qucslib.cpp  qucslib.h  qucslib_.qrc  qucslib_common.h  searchdialog.cpp  searchdialog.h  symbolwidget.cpp  symbolwidget.h
qucs-rescodes/: CMakeLists.txt  ChangeLog  Makefile.am  classproto.h  helpdialog.cpp  helpdialog.h  main.cpp  mycolorbox.cpp  mycolorbox.h  myresistancebox.cpp  myresistancebox.h  mywidget.h  qresistor.h  qucsrescodes.1  qucsrescodes.1.in  qucsrescodes.qrc  resistor.cpp
qucs-transcalc/: CMakeLists.txt  ChangeLog  Makefile.am  c_microstrip.cpp  c_microstrip.h  coax.cpp  coax.h  coplanar.cpp  coplanar.h  helpdialog.cpp  helpdialog.h  main.cpp  microstrip.cpp  microstrip.h  optionsdialog.cpp  optionsdialog.h  qucstrans.1  qucstrans.ap  qucstrans.cpp  qucstrans.h  rectwaveguide.cpp  rectwaveguide.h  stripline.cpp  stripline.h  transline.cpp  transline.h  units.h
qucsator/: AUTHORS  BUGS  Makefile.am  README  THANKS  TODO  config.h.cmake  configure.ac  qucs_typedefs.h.cmake  qucs_typedefs.h.in
src/: CMakeLists.txt  MakeList  Makefile.am  aboutdialog.cpp  aboutdialog.h  action.h  attach.cpp  c__cmd.cc  cmdeltdlg.cpp  cmdeltdlg.h  component.cc  component_widget.cpp  component_widget.h  conductor.cpp  cursors.cpp  data.cc  diag_var.cpp  diagram.cpp  diagram.h  diagramdialog.cpp  diagramdialog.h  dispatcher.cc  doc_actions.cpp  doc_actions.h  docfmt.h  e_base.cc  e_cardlist.h  element.cpp  element_graphics.cpp  element_graphics.h  element_list.cpp  factory.cc  findbr.cc  geometry.cpp  globals.cpp  graph.cpp  imagewriter.cpp  imagewriter.h  importdialog.cpp  io.cpp  (+107 more)
(+6358 files in other folders)
